<resources>

    <string name="app_name">Flash Trivia Challenge</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="quick_play">Quick Play</string>
    <string name="custom_game">Custom Game</string>
    <string name="my_profile">My Profile</string>
    <string name="friends">Friends</string>
    <string name="high_scores">High Scores</string>
    <string name="info">Info</string>
    <string name="title_activity_quick_play">Quick Play</string>
    <string name="quickplay_waiting">Waiting For Other Players. . . </string>
    <string name="title_activity_custom_game">CustomGame</string>
    <string name="go">Go</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_app_version">AppVersion</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_invite_friends">InviteFriends</string>
    <string name="Name1">Sean</string>
    <string name="Name2">John</string>
    <string name="Name3">Jialue</string>
    <string name="Name4">Simeng</string>
    <string name="Name5">Friend</string>
    <string name="Invite">Invite Friends</string>
    <string name="Appversion">App Version</string>
    <string name="C_Appversion">Current Version:</string>
    <string name="Last_Appversion">Last Version:</string>
    <string name="Number_Version">1.0</string>
    <string name="Last_Number_Version">1.2</string>
    <string name="Upgrade">Upgrade</string>
    <string name="Question">Question 1:</string>
    <string name="title_activity_gaming">Gaming</string>
    <string name="Content_Question"></string>
    <string name="Answer1"></string>
    <string name="Answer2"></string>
    <string name="Answer3"></string>
    <string name="Answer4"></string>
    <string name="Next">Next</string>
    <string name="Home">Go Home</string>
    <string name="NewGame">New Game</string>
    <string name="Contact">Contact Us</string>
    <string name="GameScore">Game Scores</string>
    <string name="Top1">First Place</string>
    <string name="Top1_daily_score">0.0</string>
    <string name="Top1_weekly_score">0.0</string>
    <string name="Top2">Second Place</string>
    <string name="Top2_daily_score">0.0</string>
    <string name="Top2_weekly_score">0.0</string>
    <string name="Top3">Third Place</string>
    <string name="Top3_daily_score">0.0</string>
    <string name="Top3_weekly_score">0.0</string>
    <string name="Top4">Fourth Place</string>
    <string name="Top4_daily_score">0.0</string>
    <string name="Top4_weekly_score">0.0</string>
    <string name="Top5">Fifth Place</string>
    <string name="Top5_daily_score">0.0</string>
    <string name="Top5_weekly_score">0.0</string>
    <string name="Top6">Sixth Place</string>
    <string name="Top6_daily_score">0.0</string>
    <string name="Top6_weekly_score">0.0</string>
    <string name="Top7">Seventh Place</string>
    <string name="Top7_daily_score">0.0</string>
    <string name="Top7_weekly_score">0.0</string>
    <string name="Top8">Eighth Place</string>
    <string name="Top8_daily_score">0.0</string>
    <string name="Top8_weekly_score">0.0</string>
    <string name="Top9">Ninth Place</string>
    <string name="Top9_daily_score">0.0</string>
    <string name="Top9_weekly_score">0.0</string>
    <string name="Top10">Tenth Place</string>
    <string name="Top10_daily_score">0.0</string>
    <string name="Top10_weekly_score">0.0</string>
    <string name="friend1" />
    <string name="User1">User 1</string>
    <string name="User2">User 2</string>
    <string name="User3">User 3</string>
    <string name="User4">User 4</string>
    <string name="User5">User 5</string>
    <string name="User6">User 6</string>
    <string name="User7">User 7</string>
    <string name="User8">User 8</string>
    <string name="User9">User 9</string>
    <string name="User10">User 10</string>
    <string name="yourscore">Your Score:</string>
    <string name="score"></string>
    <string name="correct"></string>
    <string name="Top_ids">1 to 10 ids</string>
    <string name="Top_D_scores">1 to 10 Dscores</string>
    <string name="Top_W_scores">1 to 10 Wscores</string>
    <string name="title_activity_users_list">UsersList</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="technology">Technology</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="title_activity_other_profile">OtherProfile</string>
    <string name="ques1">Q: How do I start a game?</string>
    <string name="ans1">A: A game can be started by either clicking on "Quick Game", or by choosing "Custom Game" and selecting a genre.</string>
    <string name="ques2">Q: How can I change my Username?</string>
    <string name="ans2">A: The Username can be changed by clicking on the "My Profile" screen, and typing in the desired username.</string>
    <string name="ques3">Q: How do I exit the app?</string>
    <string name="ans3">A: The app can be exited by clicking the back button until you return to your home screen.</string>
    <string name="daily">Daily Score:</string>
    <string name="weekly">Weekly Score:</string>
    <string name="dailyscore"></string>
    <string name="weeklyscore"></string>

</resources>