<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background"
    >

    <Button
        android:id="@+id/gotoCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="50dp"
        android:text="@string/NewGame" />

    <Button
        android:id="@+id/goHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/Home" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/GameScore"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/yourscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/gotoCustom"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/yourscore"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yourscore"
        android:layout_alignBottom="@+id/yourscore"
        android:layout_alignRight="@+id/goHome"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <ImageView
            android:id="@+id/score_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/pic" />

</RelativeLayout>